--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
     "@angular/platform-browser-dynamic": "~8.2.13",
     "@angular/router": "~8.2.13",
     "@ng-bootstrap/ng-bootstrap": "^5.1.4",
+    "angular-bootstrap-md": "^8.6.0",
     "bootstrap": "^4.3.1",
+    "canvasjs": "^1.8.1",
+    "chart.js": "^2.9.3",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
+    "lite-server": "^2.5.4",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
