--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "jquery": "^3.4.1",
     "lite-server": "^2.5.4",
     "ng2-charts": "^2.3.0",
-    "rxjs": "~6.4.0",
+    "rxjs": "^6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
